<resources>
    <string name="app_name">Max Poilane</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="separateur_morpion">¤</string>
    <string name="stats">Historiques</string>
    <string name="wsmsg_maj">Last updated:</string>
    <string name="Yes">Oui</string>
    <string name="No">Non</string>
    <string name="activation_GPS_requise">Vous devez activer votre GPS pour poursuivre. Voulez-vous le faire maintenant ?</string>
    <string name="Synchro">Synchro</string>
	 <string name="hotline">Hotline</string>
    <string name="information">I</string>
    <string name="Carto">Carto</string>
    <string name="Carto_maj">Mise à jour des Points d\'intérêts en cours</string>
    <string name="Synchro_maj">Mise à jour des données en cours</string>
    <string name="centrer">Centrer</string>
    <string name="demo">Démo</string>
    <string name="demo_on">Le mode "démo" est enclenché</string>
    <string name="demo_off">Le mode "démo" est arrêté</string>
    <string name="tournee_on">Le mode "tournée" est enclenché</string>
    <string name="tournee_off">Le mode "tournée" est arrêté</string>
    <string name="centrer_carte">Centrer dynamiquement la carte sur ma position</string>
    <string name="centrer_carte_not">Ne pas centrer la carte sur ma position</string>
    <string name="map_api_key">09WYiZfadJ7YB3woB2NQSpTacfJED5jEKWNFDKg</string>
    <string name="Geocode">Géocoder</string>
    <string name="Stock">Stock</string>
    <string name="Stock_et_commande">Historique</string>
    <string name="Effectuer_commande">Effectuer une facture</string>
    <string name="Naviguer">Naviguer</string>
    <string name="Appeler">Appeler</string>
    <string name="ficheclient">Fiche client</string>
     <string name="contact">Contacts</string>
     <string name="rapportactivite">Rapport d\'activité</string>
     <string name="listemateriel">Matériel</string>
     <string name="listematerielclient">Matériel client</string>
      <string name="listepretmateriel">Liste prêt matériel</string>
      <string name="listemachine">Liste machine</string>
    <string name="POI">POI</string>
    <string name="Tournee">Tournée</string>
    <string name="menu_bilanjour">Bilan de la journée</string>
    <string name="Facture">Faire un BL</string>
    <string name="BL">Faire un Bon de livraison</string>
    <string name="Avoir">Faire un Avoir</string>
    <string name="Retour">Faire un Retour marchandises</string>
    <string name="b_toggle_retour">Retour</string>
    <string name="b_toggle_avoir">Avoir</string>
    <string name="Simulation">Simulation</string>
    <string name="Client">Client</string>
    <string name="Prospect">Prospect</string>
    <string name="de">de</string>
    <string name="a">à</string>
    <string name="m">m</string>
    <string name="km">km</string>
    <string name="Lundi">Lundi</string>
    <string name="Mardi">Mardi</string>
    <string name="Mercredi">Mercredi</string>
    <string name="Jeudi">Jeudi</string>
    <string name="Vendredi">Vendredi</string>
    <string name="Samedi">Samedi</string>
    <string name="Dimanche">Dimanche</string>
    <string name="Heure">Heure</string>
    <string name="Date">Date</string>
    <string name="Fermeture">Fermeture</string>
    <string name="Vacances">Vacances</string>
    <string name="select_date_time_tournee">Veuillez sélectionner une date ainsi que l\'horaire pour votre tournée.</string>
    <string name="actuellement_ferme">actuellement fermé</string>
    <string name="ouvert_jusqua">ouvert jusqu\' à</string>
    <string name="list_clients_failed_geocode">Adresse des clients à mettre à jour</string>
    <string name="Stock_esime">Stock estimé</string>
    <string name="Stock_mini">Stock mini</string>
    <string name="A_proximite">À proximité</string>
    <string name="Ville">Ville</string>
    <string name="Tel">Tél</string>
    <string name="Consommation_par_semaine">Consommation par semaine</string>
    <string name="derniere_visite">Dernière visite le</string>
    <string name="stock_de">stock de</string>
    <string name="Consommation_depuis_derniere_visite">Consommation depuis dernière visite</string>
    <string name="mntht">Mnt HT :</string>
    <string name="date_selectionnee">Date sélectionnée</string>
    <string name="selectionner_date">Sélectionner une date</string>
    <string name="Valider">Valider</string>
    <string name="Annuler">Annuler</string>
    <string name="Selectionner_date_future">Il est nécessaire de sélectionner une date future</string>
    <string name="pas_de_resultat">Pas de résultat</string>
    <string name="interrogation_temps_reel">Interrogation en cours&#8230;</string>
    <string name="merci_patienter">Merci de patienter la fin de la récupération des clients</string>
    <string name="merci_patienter2">Merci de patienter jusqu\'à la fin de la tâche et effectuer votre demande de nouveau.</string>
    <string name="prevenir_par_email">Prévenir les clients</string>
    <string name="email_sujet">Visite prochaine</string>
    <string name="email_body">Bonjour,\n\nvotre stock de Redbull se réduit. Notre livreur viendra vous réapprovisionner le %s.\n\nBien cordialement</string>
    <string name="zoom_please">Merci de zoomer pour effectuer cette tâche</string>
    <string name="selection_zone">Sélectionner une zone</string>
    <string-array name="zone_array">
        <item>zone1</item>
    </string-array>
    <string name="CestOuvert">Open</string>
    <string name="CestFerme">Désactiver</string>
    <string name="Vu">Vu</string>
    <string name="AVoir">à voir</string>
    <string name="menu_param">Paramètres</string>
    <string name="menu_plugins">Plugins</string>
    <string name="menu_go">Clients</string>
     <string name="livreur_select">xlivreur</string>
    <string name="menu_inventaire">Inventaire véhicule</string>
    <string name="menu_transfertStock">Transfert de stock</string>
    <string name="menu_catalogue">BL non envoyé</string>
    <string name="menu_ech_entre_livreur">Transfert de stock</string>
    <string name="commande_print">Imprimer</string>
    <string name="commande_printduplicata">Imprimer duplicata</string>
     <string name="commande_pdf">Visualisation du PDF</string>
    <string name="commande_valider">Valider</string>
    <string name="commande_panier">Panier</string>
    <string name="commande_tout">Gamme habituelle</string>
    <string name="commande_annuler">Annuler</string>
    <string name="commande_quitter">Quitter</string>
    <string name="commande_aucunesaisie">Aucune quantité saisie</string>
    <string name="commande_fichecli">Fiche client</string>
    <string name="commande_print_msg">Attention vous ne pourrez plus modifier ou annuler ce document, imprimer ?</string>
    <string name="commande_valider_msg">Confirmez-vous le BL ?</string>
    <string name="commande_annuler_msg">Effacer ce document définitivement ?</string>
    <string name="commande_impossibledelete">Vous ne pouvez plus annuler le document car vous l\'avez imprimé</string>
    <string name="commande_impossibledelete2">Vous ne pouvez plus annuler le document car vous le client a déjà signé</string>
    <string name="commande_notPrinted">Vous devez imprimer le document d\'abord</string>
    <string name="commande_noLines">Le document est vide</string>
    <string name="commande_Historique">Historique</string>
    <string name="commande_Cadencier">Cadencier</string>
    <string name="commande_quest">Questions</string>
    <string name="commande_reglement">Réglement</string>
    <string name="encours_du_client_depasse">L\'encours dû par le client a été dépassé.</string>
     <string name="commande_duplicata">Voulez-vous imprimer le duplicata ?</string>
    <string name="inventaire_encours">Impossible un inventaire est en cours et doit être transmis avant de pouvoir continuer</string>
    <string name="encours_client">Encours : </string>
    <string name="inventaire_connexion">Transmettre</string>
    <string name="inventaire_print">Imprimer</string>
    <string name="inventaire_quit">Quitter</string>
    <string name="inventaire_resteainventorier">Reste à inventorier</string>
    <string name="inventaire_anomalies">Anomalies</string>
    <string name="transfertstock_encours">Impossible un réappro ou déchargement est en cours et doit être transmis avant de pouvoir continuer</string>
    <string name="transfertstock_connexion">Transmettre</string>
    <string name="transfertstock_print">Imprimer les anomalies</string>
    <string name="transfertstock_quit">Quitter</string>
    <string name="transfertstock_resteainventorier">Reste à inventorier</string>
    <string name="transfertstock_anomalies">Anomalies</string>
    <string name="menu_veuillezpatienter">Veuillez patienter&#8230;</string>
    <string name="menu_miseajour">Mise à jour en cours&#8230;</string>
    <string name="newversion_agendanem">Agenda nouvelle version disponible</string>
    <string name="newversion_expresso">Max Poilane nouvelle version disponible</string>
    <string name="newversion_questionem">Questionnaire nouvelle version disponible</string>
    <string name="newversion_printer">Printer nouvelle version available</string>
    <string name="newversion">Nouvelle version disponible</string>
    <string name="prospect_titre">Fiche client</string>
    <string name="prospect_company">Société</string>
    <string name="prospect_code">Code</string>
    <string name="prospect_civil">Civilité</string>
    <string name="prospect_nom">Nom</string>
    <string name="prospect_contact">Contact</string>
    <string name="prospect_adr1">Adresse 1</string>
    <string name="prospect_cp">Code postal</string>
    <string name="prospect_ville">Ville</string>
    <string name="prospect_tel">Téléphone</string>
    <string name="prospect_fax">Fax</string>
    <string name="prospect_pays">Pays</string>
    <string name="prospect_adr2">Adresse 2</string>
    <string name="prospect_siret">Siret</string>
    <string name="prospect_comment">Commentaire</string>
    <string name="prospect_cattarif">Code tarif</string>
    <string name="prospect_catcompta">Catégorie comptable</string>
    <string name="prospect_typepdv">Type de commerce</string>
    <string name="prospect_impossiblemsg">Impossible pour un nouveau client</string>
    <string name="prospect_obligatoire"> est obligatoire.</string>
    <string name="quest_obligatoire">Le questionnaire est obligatoire pour les nouveaux clients</string>
    <string name="prospect_NouveuNumeroObligatoire">Veuillez générer un nouveau numero prospect.</string>
    <string name="menu_prospectnewnumber">Générer numéro prospect</string>
    <string name="retourmateriel_titre">Retour matériel</string>
    <string name="retourmateriel_code">Code matériel</string>
    <string name="retourmateriel_libart">Désignation</string>
    <string name="retourmateriel_SZ">Plaque</string>
    <string name="retourmateriel_numserie">Numéro série</string>
    <string name="total">Total : </string>
    <string name="total_selection">Total sélection :</string>
    <string name="solde">Solde</string>
    <string name="title_liste_encaissements">Encaissements</string>
    <string name="title_liste_factures">Factures</string>
    <string name="encaissement_regler">Régler</string>
    <string name="liste_facture_date">Date</string>
    <string name="liste_facture_type">Type</string>
    <string name="liste_facture_numero">Numéro</string>
    <string name="liste_facture_montantdu">Dû</string>
    <string name="liste_facture_montant">Total</string>
    <string name="signataire">Signé par : </string>
    <string name="signature_title">Signature</string>
    <string name="validation_acompte_title">Valider l\'acompte</string>
    <string name="button_valider_acompte">Valider</string>
			<string name="contactcli_comment">Commentaire</string>
</resources>