<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Date"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
    
    <DatePicker
        android:id="@+id/dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" 
        android:layout_gravity="center_horizontal"/>
    
    <TextView 
        	android:id="@+id/tv_heure_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Heure"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/selection_zone"
            android:paddingRight="20dip"/>
    	<Spinner 
    	    android:id="@+id/s_1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/zone_array"/>
    </LinearLayout>
    <TimePicker 
        android:id="@+id/tp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>