<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:baselineAligned="false"
        android:gravity="center_vertical|center_horizontal"
        android:padding="15dp"
        android:weightSum="4" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left" >

            <TextView
                android:id="@+id/tvNomClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" >

            <TextView
                android:id="@+id/tvCodeClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFacturesEncaissement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15" >

        <TextView
            android:id="@+id/tvListeFacturesTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/list_impair"
            android:gravity="center"
            android:text="@string/title_liste_factures"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <LinearLayout
            android:id="@+id/llTitleListe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.74"
            android:background="@color/list_impair"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="13" >
            
            <View 
                android:id="@+id/vVide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></View>
            
            <TextView 
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:paddingLeft="15dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/liste_facture_date"/>
            
            <TextView 
                android:id="@+id/tvTypeFacture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/liste_facture_type"/>
            
            <TextView 
                android:id="@+id/tvNumeroDoc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:layout_weight="3"
                android:text="@string/liste_facture_numero"/>
            
            <TextView 
                android:id="@+id/tvMontantDu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:layout_weight="2"
                android:text="@string/liste_facture_montantdu"/>
            
            <TextView 
                android:id="@+id/tvMontant"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/liste_facture_montant"/>
            
            <View 
                android:id="@+id/vVide2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></View>
            
        </LinearLayout>

        <ListView
            android:id="@+id/lvFactures"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/ll_totaux"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/vert_totaux"
            android:baselineAligned="false"
            android:padding="20dp"
            android:weightSum="6" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/tvTotalFacturesTitre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/total"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvTotalFactures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#0000FF"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="3" >

                <TextView
                    android:id="@+id/tvTotalSelectionTitre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/total_selection"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvTotalSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#0000FF"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvSolde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/solde"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/cbSolde"
                    android:scaleX="1.40"
                    android:scaleY="1.40"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>      
        </LinearLayout>
        
         <RelativeLayout
                android:id="@+id/llEncaissement"
                android:layout_width="match_parent"
                android:background="@color/vert_totaux"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvListeEncaissementsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/vert_totaux"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/title_liste_encaissements"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/bRegler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/encaissement_regler" />
            </RelativeLayout>

        <ListView
            android:id="@+id/lvEncaissement"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:padding="10dp" />
    </LinearLayout>

</LinearLayout>