<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvValidationTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:background="@color/list_impair"
        android:text="@string/validation_acompte_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/llNomSignataire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvNomSignataire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/signataire"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etNomClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:layout_marginRight="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSignature"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvSignatureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/signature_title"
            android:textColor="#0000ff"
            android:textSize="20sp"
            android:textStyle="italic" >
        </TextView>

        <RelativeLayout
            android:id="@+id/rlSignature"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/area_background"
            android:focusable="true"
            android:padding="20dip" >

            <ImageView
                android:id="@+id/ivSignature"
                android:layout_width="fill_parent"
                android:layout_height="100dip"
                android:gravity="top"
                android:textColor="#000000" >
            </ImageView>
        </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        
        <Button 
            android:id="@+id/bValiderAcompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_valider_acompte"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>

</LinearLayout>